--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -2,3 +2,5 @@ $primary: rgb(26, 241, 241);
 $secondary: #bbb7b7;
 $dark-absolute: #000;
 $dark-transparent: rgb(0, 0, 0, 0.6);
+$error: red;
+$light: #fff;
