--- a/scss/index.scss
+++ b/scss/index.scss
@@ -15,3 +15,4 @@
 @import "../components/AboutComponent/AboutComponent.scss";
 @import "../components/PortfolioComponent/PortfolioComponent.scss";
 @import "../components/ContactComponent/ContactComponent.scss";
+@import "../components/ButtonPrimary/ButtonPimary.scss";
