--- a/components/ContactComponent/ContactComponent.scss
+++ b/components/ContactComponent/ContactComponent.scss
@@ -1,5 +1,9 @@
+@import url(https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css);
+
 #contact {
-  display: flex;
+  .content {
+    display: flex;
+  }
 
   h1 {
     color: $primary;
@@ -13,6 +17,7 @@
 
   .contact-map {
     flex: 1;
+    padding: 0 0 20px 50px;
   }
 
   .actions {
