--- a/components/ContactComponent/ContactComponent.scss
+++ b/components/ContactComponent/ContactComponent.scss
@@ -5,12 +5,6 @@
     display: flex;
   }
 
-  h1 {
-    color: $primary;
-    font-weight: bold;
-    font-size: 62px;
-  }
-
   .contact-form {
     flex: 1;
   }
@@ -18,6 +12,24 @@
   .contact-map {
     flex: 1;
     padding: 0 0 20px 50px;
+
+    .map {
+      box-shadow: 0 5px 10px $primary;
+    }
+
+    .info {
+      position: absolute;
+      top: 220px;
+      left: 55.3%;
+      z-index: 9999;
+      background-color: $dark-transparent;
+      padding: 2%;
+    }
+
+    .map-marker {
+      font-size: 48px;
+      color: $dark-transparent;
+    }
   }
 
   .actions {
