Loading page transition

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -16,3 +16,4 @@
 @import "../components/PortfolioComponent/PortfolioComponent.scss";
 @import "../components/ContactComponent/ContactComponent.scss";
 @import "../components/ButtonPrimary/ButtonPimary.scss";
+@import "../components/Loader/Loader.scss";
