Create repositories gallery

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,4 +1,10 @@
 header {
+  display: none;
+
+  @media (min-width: 200px) {
+    display: block;
+  }
+
   .sidebar {
     position: fixed;
     top: 0;
