--- a/scss/index.scss
+++ b/scss/index.scss
@@ -17,3 +17,4 @@
 @import "../components/ContactComponent/ContactComponent.scss";
 @import "../components/ButtonPrimary/ButtonPimary.scss";
 @import "../components/Loader/Loader.scss";
+@import "../components/PortfolioComponent/PortfolioItem/PortfolioItem.scss";
