--- a/components/PortfolioComponent/PortfolioComponent.scss
+++ b/components/PortfolioComponent/PortfolioComponent.scss
@@ -1,5 +1,7 @@
 #portfolio {
   .projects {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
   }
 }
