Show or hide sidebar depend browser width

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,3 +18,4 @@
 @import "../components/ButtonPrimary/ButtonPimary.scss";
 @import "../components/Loader/Loader.scss";
 @import "../components/PortfolioComponent/PortfolioItem/PortfolioItem.scss";
+@import "../components/WorkComponent/WorkComponent.scss";
