--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,11 +1,11 @@
 header {
-  display: none;
-
-  @media (min-width: 200px) {
-    display: block;
-  }
-
   .sidebar {
+    display: none !important;
+
+    @media (min-width: 837px) {
+      display: inline !important;
+    }
+
     position: fixed;
     top: 0;
     left: 0;
