--- a/components/PortfolioComponent/PortfolioComponent.scss
+++ b/components/PortfolioComponent/PortfolioComponent.scss
@@ -1,7 +1,15 @@
 #portfolio {
   .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 15px;
+    height: 50vh;
+    overflow-x: auto;
+    overflow-y: visible !important;
+    padding: 15px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
