--- a/scss/global.scss
+++ b/scss/global.scss
@@ -15,6 +15,13 @@ section {
   h1 {
     transition: all 0.8s;
     cursor: default;
+    font-size: 62px;
+    text-align: center;
+
+    @media (min-width: 837px) {
+      font-size: 92px;
+      text-align: left;
+    }
 
     &:hover {
       transform: translateY(-15px);
@@ -23,14 +30,24 @@ section {
 }
 
 section:not(#home) .content {
-  padding: 7% 5% 2% 10%;
+  padding: 15% 7% 7% 7%;
+
+  @media (min-width: 837px) {
+    padding: 7% 5% 2% 10%;
+  }
 
   h1 {
     color: $primary;
     font-weight: 800;
-    font-size: 62px;
+    font-size: 40px;
+    text-align: center;
     cursor: default;
     transition: all 0.8s;
+
+    @media (min-width: 837px) {
+      font-size: 62px;
+      text-align: left;
+    }
 
     &:hover {
       transform: translateX(-15px);
