Portfolio page design

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -19,3 +19,4 @@
 @import "../components/Loader/Loader.scss";
 @import "../components/PortfolioComponent/PortfolioItem/PortfolioItem.scss";
 @import "../components/WorkComponent/WorkComponent.scss";
+@import "../components/PortfolioComponent/PortfolioItem/LanguageItem/LanguageItem.scss";
