--- a/components/PortfolioComponent/PortfolioComponent.scss
+++ b/components/PortfolioComponent/PortfolioComponent.scss
@@ -1,12 +1,12 @@
 #portfolio {
   .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(480px, 1fr));
     gap: 15px;
     height: 50vh;
     overflow-x: auto;
-    overflow-y: visible !important;
     padding: 15px;
+    margin: -15px;
 
     &::-webkit-scrollbar {
       display: none;
