--- a/components/PortfolioComponent/PortfolioItem/PortfolioItem.scss
+++ b/components/PortfolioComponent/PortfolioItem/PortfolioItem.scss
@@ -1,14 +1,13 @@
 .portfolio-item {
-  padding: 10px;
-  height: 200px;
-  overflow: hidden;
   padding: 0;
   transition: transform 0.5s;
   filter: opacity(0.8);
-  border-radius: 5%;
+  border-radius: 0.5rem;
   color: $light;
   background-color: $dark-transparent;
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 
   &:hover {
     transform: scale(1.02);
@@ -17,10 +16,30 @@
 
   .title {
     font-weight: bold;
-    width: 100%;
+    width: 96%;
     margin: 0;
-    padding: 10px;
+    padding: 2%;
     border-bottom: solid 1px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .view-code a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: $light;
+      text-decoration: none;
+
+      svg {
+        margin: 0;
+      }
+
+      span {
+        font-size: 11px;
+        font-weight: normal;
+      }
+    }
 
     svg {
       margin-right: 5px;
