--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -4,3 +4,11 @@ $dark-absolute: #000;
 $dark-transparent: rgb(0, 0, 0, 0.6);
 $error: red;
 $light: #fff;
+$background: linear-gradient(
+  to right bottom,
+  #1a1b1e,
+  #36414d,
+  #4e6d7f,
+  #629db1,
+  #77d1de
+);
