--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -4,6 +4,7 @@ $dark-absolute: #000;
 $dark-transparent: rgb(0, 0, 0, 0.6);
 $error: red;
 $light: #fff;
+$light-grey: rgba(170, 162, 162, 0.788);
 $background: linear-gradient(
   to right bottom,
   #1a1b1e,
