--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -14,7 +14,7 @@ header {
     @media (min-width: 837px) {
       width: 80px;
       flex-direction: column;
-      box-shadow: 0 5px 10px $primary;
+      box-shadow: 0 0 3px $primary;
       height: 100vh;
     }
 
