--- a/components/PortfolioComponent/PortfolioComponent.scss
+++ b/components/PortfolioComponent/PortfolioComponent.scss
@@ -1,4 +1,8 @@
 #portfolio {
+  @media (min-width: 1024px) {
+    padding-left: 5%;
+  }
+
   .projects {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -14,6 +18,10 @@
 
     @media (min-width: 837px) {
       height: 50vh;
+    }
+
+    @media (min-width: 1024px) {
+      height: 60vh;
     }
 
     &::-webkit-scrollbar {
