--- a/scss/index.scss
+++ b/scss/index.scss
@@ -20,3 +20,4 @@
 @import "../components/PortfolioComponent/PortfolioItem/PortfolioItem.scss";
 @import "../components/WorkComponent/WorkComponent.scss";
 @import "../components/PortfolioComponent/PortfolioItem/LanguageItem/LanguageItem.scss";
+@import "../components/LanguageSelector/LanguageSelector.scss";
