--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -32,6 +32,7 @@ header {
       @media (min-width: 837px) {
         font-size: 70px;
         padding: 0;
+        padding-top: 5px;
         width: 100%;
       }
     }
