--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -27,7 +27,7 @@ header {
       text-decoration: none;
       font-weight: bold;
       text-align: center;
-      font-family: "Bebas Neue", cursive;
+      font-family: "Bebas Neue", sans-serif, cursive;
 
       @media (min-width: 837px) {
         font-size: 70px;
