Completed texts. Align logo

--- a/components/AboutComponent/AboutComponent.scss
+++ b/components/AboutComponent/AboutComponent.scss
@@ -39,6 +39,11 @@
           overflow-x: auto;
           width: 85%;
 
+          p {
+            margin-bottom: 20px;
+            text-align: left;
+          }
+
           &::-webkit-scrollbar {
             display: none;
           }
