--- a/components/LanguageSelector/LanguageSelector.scss
+++ b/components/LanguageSelector/LanguageSelector.scss
@@ -18,6 +18,12 @@
       font-weight: bold;
     }
 
+    a:hover {
+      .list-lang {
+        display: block;
+      }
+    }
+
     &:hover {
       background-color: rgba(0, 0, 0, 0.5);
 
